@@ -2,6 +2,9 @@
   - remove string type. SPVM string become byte[].
   - SPVM::new_string_bytes renamed to SPVM::new_byte_array_data and return SPVM::Array::Byte object
   - SPVM::new_string renamed to SPVM::new_byte_array_string and return SPVM::Array::Byte object
+  - rename get_elements to to_array
+  - rename get_string to to_string
+  - rename get_data to to_data
   
 0.0267 2017-09-18
   - add .= operator
